fixed overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,14 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
+
 }
 
 .App {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 html {
@@ -19,6 +20,7 @@ html {
 
 body {
   max-width: 100vw;
+  
 }
 
 nav {
@@ -300,7 +302,7 @@ HIGHLIGHTS
   background: url("./assets/wave.svg");
   content: "";
   position: absolute;
-  width: 100vw;
+  width: 101vw;
   height: 12vw;
   left: 0;
   z-index: 1;
